# zk-nft

anchor/: .gitignore  Anchor.toml  package.json
anchor/programs/zk-nft/: Cargo.toml
anchor/programs/zk-nft/src/: constants.rs  errors.rs  lib.rs
anchor/programs/zk-nft/src/processor/: create_asset.rs  create_blob.rs  create_group.rs  init_blob_upload.rs  log_blob.rs  mod.rs  transfer.rs  upload_blob.rs
anchor/programs/zk-nft/src/state/: asset_data.rs  attributes.rs  base_data.rs  blob.rs  group.rs  mod.rs  new_address_params.rs  owner_updated_event.rs  packed_input_compressed_pda.rs  uploaded_blob.rs
anchor/programs/zk-nft/src/utils/: get_asset_resource_seed.rs  mod.rs
anchor/src/: index.ts
anchor/tests/: zk-nft.ts
frontend/: .env  .eslintrc.js  package.json
frontend/src/common/hooks/: useLightRpc.tsx
frontend/src/features/mint-zk-nft/components/: MintZkNftButton.tsx  MintZkNftSection.tsx
frontend/src/features/zk-nft-holdings/components/: TransferButton.tsx  ZkNft.tsx  ZkNfts.tsx
frontend/src/features/zk-nft-holdings/hooks/: useAsset.tsx  useBlobTxSigContents.tsx  useUserAssetIds.tsx
