[package]
name = "zk-nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_nft"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
custom-heap = ["light-heap"]
default = ["custom-heap", "idl-build", "cpi-context"]
test-sbf = []
cpi-context = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["event-cpi"] }
light-system-program = { git = "https://github.com/Lightprotocol/light-protocol.git", tag = "v0.4.1", version = "0.4.1", features = ["cpi"] }
account-compression = { git = "https://github.com/Lightprotocol/light-protocol.git", tag = "v0.4.1", version = "0.4.1",  features = ["cpi"] }
light-hasher = { git = "https://github.com/Lightprotocol/light-protocol.git", tag = "v0.4.1", version = "0.2.1" }
light-sdk = { git = "https://github.com/Lightprotocol/light-protocol.git", tag = "v0.4.1", version = "0.2.1", features = ["cpi"] }
light-utils = { version = "0.2.0" }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
light-heap = { git = "https://github.com/Lightprotocol/light-protocol.git", tag = "v0.4.1", version = "0.2.1", optional = true }
